kubernetes-reference-architectures/kyverno-image-verification/k8s/deployment-signed-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-signed
  namespace: kyverno-verify-demo
  labels:
    app: todo-app-signed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-signed
  template:
    metadata:
      labels:
        app: todo-app-signed
    spec:
      containers:
        - name: app
          image: docker.io/agovindasamy/arun:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
