kubernetes-reference-architectures/kyverno-image-verification/k8s/policy-cosign-verify-enforce.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-cosign-signature-agovindasamy-arun-enforce
  annotations:
    policies.kyverno.io/title: Verify Cosign Signatures (Enforce)
    policies.kyverno.io/category: Supply Chain Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Enforces cosign signature verification for docker.io/agovindasamy/arun
      images. Use this after validating in audit mode.
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-agovindasamy-arun-signatures
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - docker.io/agovindasamy/arun:*
            - agovindasamy/arun:*
          mutateDigest: true
          verifyDigest: true
          required: true
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE3sXQM8aVFerFG9vrn5rpUx/fUxl3
[...]
                      -----END PUBLIC KEY-----
